--- a/Aura.uproject
+++ b/Aura.uproject
@@ -31,16 +31,8 @@
 			"Enabled": true
 		},
 		{
-			"Name": "SQLiteSupport",
-			"Enabled": true
-		},
-		{
-			"Name": "SQLiteCore",
-			"Enabled": true
-		},
-		{
 			"Name": "MySQL",
-			"Enabled": true,
+			"Enabled": false,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/4a497572d1014beab577112d5a37c813"
 		},
 		{
