--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -134,3 +134,18 @@ bAllowClientSideNavigation=True
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/Aura.AuraEffectActor.bDestroyOnEffectRemoval",NewName="/Script/Aura.AuraEffectActor.bDestroyOnEffectApplication")
+
+[/Script/PythonScriptPlugin.PythonScriptPluginSettings]
++AdditionalPaths=(Path="C:/Users/quien/Documents/Unreal Projects/Aura/PythonScript/AuraPythonScript")
+bIsolateInterpreterEnvironment=True
+bDeveloperMode=False
+bRemoteExecution=False
+RemoteExecutionMulticastGroupEndpoint=239.0.0.1:6766
+RemoteExecutionMulticastBindAddress=127.0.0.1
+RemoteExecutionSendBufferSizeBytes=2097152
+RemoteExecutionReceiveBufferSizeBytes=2097152
+RemoteExecutionMulticastTtl=0
+
